Fix alignment issues and side scroll bug

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -112,7 +112,6 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
     height: 100px;
     background-color: white;
     color: black;
@@ -126,10 +125,9 @@ footer ul {
 footer:before{
     content:"";
     display:block;
-    width: 1200px;
+    width: 90%;
     border-top: 1px solid gray;
     align-items: flex-start;
-    margin-left: 220px;
     margin-top: 40px;
 }
 footer li {
